--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
+    "jwt-decode": "^3.1.2",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
     "react": "^17.0.2",
