--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,2 @@
-build:
- command= npm run build
- commandOrigin= ui
- environment:
-  - REACT_APP_SERVER_URL
-  publish= /opt/build/repo/build
-  publishOrigin= config
+[build]
+ publish = "build" 
