--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,7 @@
 [build]
- publish = "build" 
+ command = "CI= npm run build"
+ commandOrigin = "ui"
+ [environment]
+  - REACT_APP_SERVER_URL
+  publish = "/opt/build/repo/build"
+  publishOrigin = "config"
