--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
  command= "CI= npm run build"
  commandOrigin = "ui"
+[[redirects]]
+  from = "/login"
+  to = "https://charlotteetflorian.netlify.app"
+  status = 200
+  force = true
+  headers = {X-From = "Netlify"}
