Change the pathname of login page.

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
  commandOrigin = "ui"
 
 [[redirects]]
-  from = "/login"
+  from = "/connexion"
   to = "https://charlotteetflorian.netlify.app"
   status = 200
   force = true
