--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "google-map-react": "^2.1.10",
     "husky": "^6.0.0",
     "jwt-decode": "^3.1.2",
     "prettier": "^2.3.0",
@@ -27,6 +28,7 @@
     "react-countdown-circle-timer": "^2.5.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-spring": "^9.1.2",
     "react-toastify": "^7.0.4",
