--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,15 @@
 [build]
- pubilsh = "build"
- 
+ command= "CI= npm run build"
+ commandOrigin = "ui"
+
+[[redirects]]
+  from = "/connexion"
+  to = "https://charlotteetflorian.netlify.app"
+  status = 200
+  force = true
+
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
