--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,2 @@
 [build]
- command= "CI= npm run build"
- commandOrigin = "ui"
-
-[[redirects]]
-  from = "/connexion"
-  to = "https://charlotteetflorian-staging.netlify.app"
-  status = 200
-  force = true
-
-[[headers]]
-  # Define which paths this specific [[headers]] block will cover.
-  for = "/*"
-    [headers.values]
-    Access-Control-Allow-Origin = "*"
+ pubilsh = "build"
