--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -30,8 +30,8 @@
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-spring": "^9.1.2",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.2"
